# Light-Strip-Matching-Game

./: .gitignore  CMakeLists.txt  README.md  README_en.md  launch.json  partitions.csv  partitions_8M.csv  sdkconfig.defaults  start_bom_sorter.bat
InteractiveBOOM/: README.md  inject_interactive_bom_bridge.py  interactive_bom_bridge.js  open_latest_bom.bat  open_latest_bom.py  serve_interactive_bom.py  start_local_http.bat
backup/: components_backup_2026-03-11.json  components_backup_2026-03-13.json
components/esp-wifi-connect/: CMakeLists.txt  README.md  idf_component.yml
components/esp-wifi-connect/assets/: wifi_configuration.html  wifi_configuration_done.html
docs/: MAX98357A_I2S功放接线图.md  XIAO_ESP32-S3_Sense_芯片说明.md  ai_search_decision方案.md  ai元器件分拣箱扩展方案_189b79f8.plan.md  scan_entry方案.md
main/: CMakeLists.txt  Kconfig.projbuild  application.cc  application.h  idf_component.yml  main.cc  ota.cc  st7306_driver.c  st7306_driver.h
main/assets/common/: image_generated.p3  image_generated_backup.p3
main/assets/th-TH/: language.json
main/audio_codecs/: audio_codec.cc  box_audio_codec.cc  box_audio_codec.h
main/audio_processing/: audio_processor.cc  audio_processor.h  wake_word_detect.cc  wake_word_detect.h
main/boards/common/: board.h  button.cc  button.h  printer_config.h  wifi_board.cc  wifi_board.h
main/boards/component-sorter/: component_sorter_board.cc  config.h  config.json
main/display/: display.cc  display.h  eink_display_st7306.cc  eink_display_st7306.h  lcd_display.cc  oled_display.cc  st7306_gfx.cc  st7306_gfx.h  waveguide_display.cc  waveguide_display.h
main/display/eink/: Adafruit_GFX.cpp  Adafruit_GFX.h  esp_gfx_compat.h  gfxfont.h
main/iot/: buzzer_control.cc  buzzer_control.h  component_color_palette.h  component_config.h  component_database.cc  component_database.h  component_http_server.cc  component_http_server.h  component_led_control.cc  component_led_control.h  component_sorter.cc  component_sorter.h  component_ws_server.cc  component_ws_server.h  match_game.cc  match_game.h
main/iot/things/: lamp.cc
main/led/: circular_strip.cc  circular_strip.h
main/protocols/: mqtt_protocol.cc  mqtt_protocol.h  protocol.cc  protocol.h  websocket_protocol.cc  websocket_protocol.h
